--- a/index.html
+++ b/index.html
@@ -13,5 +13,27 @@
     
 </head>
 
+    <body>
+
+    <div class="container">
+
+        <div class="video-outer">
+            <div class="video-inner">
+                <iframe src="https://www.youtube.com/embed/eAaTVhxZEJk?controls=0" frameborder="0" allowfullscreen autoplay></iframe>
+            </div>
+        </div>
+
+        <div class="content">
+            <!-- Icono desde archivo PNG -->
+            <h1>
+                <br><br><br> &#119136; Pedro, Pedro, Pedro, Pedro, ¡Pe! &#119136; <br><br><img class="icono" src="Mapache.png" alt="Mapache Pedro"
+                    style="--velSpin: 1s;">
+            </h1>
+        </div>
+
+    </div>
+
+</body>
+
 
 </html>
