--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Icono</title>
+    <link rel="stylesheet" href="styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    
+</head>
+
+    <body>
+
+    <div class="container">
+
+        <div class="video-outer">
+            <div class="video-inner">
+                <iframe src="https://www.youtube.com/embed/eAaTVhxZEJk?controls=0" frameborder="0" allowfullscreen autoplay></iframe>
+            </div>
+        </div>
+
+        <div class="content">
+            <!-- Icono desde archivo PNG -->
+            <h1>
+                <br><br><br> &#119136; Pedro, Pedro, Pedro, Pedro, ¡Pe! &#119136; <br><br><img class="icono" src="Mapache.png" alt="Mapache Pedro"
+                    style="--velSpin: 1s;">
+            </h1>
+        </div>
+
+    </div>
+
+</body>
+
+
+</html>
+
+
 
