--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="content">
             <!-- Icono desde archivo PNG -->
             <h1>
-                <br><br><br> &#119136; Pedro, Pedro, Pedro, Pedro, ¡Pe! &#119136; <br><br><img class="icono" src="Mapache.png" alt="Mapache Pedro"
+                <br><br><br> &#119136; Pedro, Pedro, Pedro, Pedro, Pe! &#119136; <br><br><img class="icono" src="Mapache.png" alt="Mapache Pedro"
                     style="--velSpin: 1s;">
             </h1>
         </div>
@@ -37,6 +37,7 @@
 
 
 </html>
+
 
 
 
